[add]: added some images to show on README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "mediapipe>=0.10.18",
+    "opencv-python>=4.10.0.84",
     "pandas>=2.2.3",
     "scikit-learn>=1.5.2",
 ]
